--- a/index.html
+++ b/index.html
@@ -2,11 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>cv</title>
+    <title>Title</title>
 </head>
 <body>
+<body style="background-color:#885">
+<h1>Fontan Timothée</h1>
+<p style="color:#560000";> Programation 9/10</p>
+<p style="color:#560000";>Graphisme 1/10</p>
+<p style="color:#560000";>Ortographe 3/10</p>
+<p style="color:#005600";> Je suis un grand fan de l'histoire du <i> jeu vidéo </i> notament dans le <i>retro-gaming</i>, c'est grâce a ceci que je me suis intéressé a la programation dans ce mileu. </p>
+<p style="color:#005600";> je fais de la programetion depuis 4ans notament du c++ et j'ai déjâ fais un petit jeu que je garde en stand by. </p>
+<p style="color:#005600";> Je ne peut plus faire de sport depuis le lycée par cause de manqque de temp et je ne joue plus vraiment a part a des jeux retro qui on <i>"marqué l'histoire"</i> du jeu vidéo et les jeux dit imanquable du moment. </p>
+<p style="color:#005600";> Je suis un grand fan de cinéma, mais je n'est pas de genre en particulé </p>
+<p style="color:#005600";> Désolée pour la page web très moche, je ne savais pas quoi faire. </p>
+<h2 style="color:#120056";> </h2>
+<table>
+    <thead>
+    <tr>
+        <th colspan="2">Mes jeux tant apprécié</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Borderlands 2</td>
+        <td>FPS sarcastique style action-RPG</td>
+        <td> <img src="bd2.jpg" alt="Image jeu Borderlands 2"></td>
+    </tr>
+    <tr>
+        <td>Looms</td>
+        <td>Jeu rétro point and click et réflexion</td>
+        <td> <img src="looms.png" alt="Image jeu loom"> </td>
+    </tr>
+    <tr>
+        <td>League of legends</td>
+        <td>MOBA et tactique en multijoueurs</td>
+        <td> <img src="lol.jpg" alt="Image jeu league of legends"></td>
+    </tr>
+    <tr>
+        <td>Super smash bros Ultimate</td>
+        <td>Jeu de combat et de platform</td>
+        <td> <img src="ssbu.jpg" alt="Image jeu super smash bros"></td>
+    </tr>
+    <tr>
+        <td>Yugioh</td>
+        <td>Jeu de carte a la magic stratégique</td>
+        <td> <img src="yugioh.jpg" alt="Image jeu yugioh"></td>
+    </tr>
+    </tbody>
+</table>
 
-<p>coucou</p>
 
 </body>
 </html>
