--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
     <tr>
         <td>Borderlands 2</td>
         <td>FPS sarcastique style action-RPG</td>
-        <td> <img src="bd2.jpg" alt="Image jeu Borderlands 2"></td>
+        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/bd2.jpg" alt="Image jeu Borderlands 2"></td>
     </tr>
     <tr>
         <td>Looms</td>
         <td>Jeu rétro point and click et réflexion</td>
-        <td> <img src="looms.png" alt="Image jeu loom"> </td>
+        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/looms.png" alt="Image jeu loom"> </td>
     </tr>
     <tr>
         <td>League of legends</td>
         <td>MOBA et tactique en multijoueurs</td>
-        <td> <img src="lol.jpg" alt="Image jeu league of legends"></td>
+        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/lol.jpg" alt="Image jeu league of legends"></td>
     </tr>
     <tr>
         <td>Super smash bros Ultimate</td>
         <td>Jeu de combat et de platform</td>
-        <td> <img src="ssbu.jpg" alt="Image jeu super smash bros"></td>
+        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/ssbu.jpg" alt="Image jeu super smash bros"></td>
     </tr>
     <tr>
         <td>Yugioh</td>
         <td>Jeu de carte a la magic stratégique</td>
-        <td> <img src="yugioh.jpg" alt="Image jeu yugioh"></td>
+        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/yugioh.jpg" alt="Image jeu yugioh"></td>
     </tr>
     </tbody>
 </table>
