--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <tr>
         <td>Borderlands 2</td>
         <td>FPS sarcastique style action-RPG</td>
-        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/bd2.jpg" alt="Image jeu Borderlands 2"></td>
+        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/bd2.jpg?raw=true" alt="Image jeu Borderlands 2"></td>
     </tr>
     <tr>
         <td>Looms</td>
