--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     <tr>
         <td>Borderlands 2</td>
         <td>FPS sarcastique style action-RPG</td>
-        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/bd2.jpg?raw=true" alt="Image jeu Borderlands 2"></td>
+        <td> <img src="bd2.jpg" height="265" width="190" alt="Image jeu Borderlands 2"></td>
     </tr>
     <tr>
         <td>Looms</td>
         <td>Jeu rétro point and click et réflexion</td>
-        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/looms.png" alt="Image jeu loom"> </td>
+        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/looms.png?raw=true" alt="Image jeu loom"> </td>
     </tr>
     <tr>
         <td>League of legends</td>
         <td>MOBA et tactique en multijoueurs</td>
-        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/lol.jpg" alt="Image jeu league of legends"></td>
+        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/lol.jpg?raw=true" alt="Image jeu league of legends"></td>
     </tr>
     <tr>
         <td>Super smash bros Ultimate</td>
