--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <tr>
         <td>Looms</td>
         <td>Jeu rétro point and click et réflexion</td>
-        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/looms.png?raw=true" alt="Image jeu loom"> </td>
+        <td> <img src="looms.png" height=""  alt="Image jeu loom"> </td>
     </tr>
     <tr>
         <td>League of legends</td>
