--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <tr>
         <td>Looms</td>
         <td>Jeu rétro point and click et réflexion</td>
-        <td> <img src="looms.png" height=""  alt="Image jeu loom"> </td>
+        <td> <img src="looms.png" height="200" width="320"  alt="Image jeu loom"> </td>
     </tr>
     <tr>
         <td>League of legends</td>
         <td>MOBA et tactique en multijoueurs</td>
-        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/lol.jpg?raw=true" alt="Image jeu league of legends"></td>
+        <td> <img src="lol.jpg" alt="Image jeu league of legends"></td>
     </tr>
     <tr>
         <td>Super smash bros Ultimate</td>
