--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
     <tr>
         <td>League of legends</td>
         <td>MOBA et tactique en multijoueurs</td>
-        <td> <img src="lol.jpg" alt="Image jeu league of legends"></td>
+        <td> <img src="lol.jpg" height="168" width="300" alt="Image jeu league of legends"></td>
     </tr>
     <tr>
         <td>Super smash bros Ultimate</td>
         <td>Jeu de combat et de platform</td>
-        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/ssbu.jpg" alt="Image jeu super smash bros"></td>
+        <td> <img src="ssbu.jpg" width="300" height="168" alt="Image jeu super smash bros"></td>
     </tr>
     <tr>
         <td>Yugioh</td>
         <td>Jeu de carte a la magic stratégique</td>
-        <td> <img src="https://github.com/Kancabricot/cv/blob/main/image/yugioh.jpg" alt="Image jeu yugioh"></td>
+        <td> <img src="yugioh.jpg" height="168" width="300" alt="Image jeu yugioh"></td>
     </tr>
     </tbody>
 </table>
