--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <tr>
         <td>Super smash bros Ultimate</td>
         <td>Jeu de combat et de platform</td>
-        <td> <img src="ssbu.jpg" width="300" height="168" alt="Image jeu super smash bros"></td>
+        <td> <img src="ssbu.jpg" height="168" width="300" alt="Image jeu super smash bros"></td>
     </tr>
     <tr>
         <td>Yugioh</td>
