--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <body style="background-color:#885">
 <h1>Fontan Timothée</h1>
+<img src="0T9A7508.jpg" height="267" width="400" alt="Image de moi">
 <p style="color:#560000";> Programation 9/10</p>
 <p style="color:#560000";>Graphisme 1/10</p>
 <p style="color:#560000";>Ortographe 3/10</p>
