--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="background-color:#885">
 <h1>Fontan Timothée</h1>
 <img src="0T9A7508.jpg" height="267" width="400" alt="Image de moi">
-<p style="color:#560000";> Programation </p> <progress value="60" max="100"></progress>
+<p style="color:#560000";> Programation </p> <progress value="60" max="100">70%</progress>
 <p style="color:#560000";>Graphisme </p>
 <p style="color:#560000";>Ortographe </p>
 <p style="color:#005600";> Je suis un grand fan de l'histoire du <i> jeu vidéo </i> notament dans le <i>retro-gaming</i>, c'est grâce a ceci que je me suis intéressé a la programation dans ce mileu. </p>
