--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <h1>Fontan Timothée</h1>
 <img src="0T9A7508.jpg" height="267" width="400" alt="Image de moi">
 <p style="color:#560000";> Programation </p> <progress value="60" max="100">70%</progress>
-<p style="color:#560000";>Graphisme </p>
-<p style="color:#560000";>Ortographe </p>
+<p style="color:#560000";>Graphisme </p> <progress value="10" max="100">70%</progress>
+<p style="color:#560000";>Ortographe </p> <progress value="30" max="100">70%</progress>
 <p style="color:#005600";> Je suis un grand fan de l'histoire du <i> jeu vidéo </i> notament dans le <i>retro-gaming</i>, c'est grâce a ceci que je me suis intéressé a la programation dans ce mileu. </p>
 <p style="color:#005600";> je fais de la programetion depuis 4ans notament du c++ et j'ai déjâ fais un petit jeu que je garde en stand by. </p>
 <p style="color:#005600";> Je ne peut plus faire de sport depuis le lycée par cause de manqque de temp et je ne joue plus vraiment a part a des jeux retro qui on <i>"marqué l'histoire"</i> du jeu vidéo et les jeux dit imanquable du moment. </p>
