--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body style="background-color:#885">
-<h1>Fontan Timothée</h1>
-<img src="0T9A7508.jpg" height="267" width="400" alt="Image de moi">
+<center> <h0>Curriculum vitae</h0> </center>
+<center> <h1>Fontan Timothée</h1> </center>
+<center> <img src="0T9A7508.jpg" height="136" width="200" alt="Image de moi"> </center>
 <p style="color:#560000";> Programation </p> <progress value="60" max="100">70%</progress>
 <p style="color:#560000";>Graphisme </p> <progress value="10" max="100">70%</progress>
 <p style="color:#560000";>Ortographe </p> <progress value="30" max="100">70%</progress>
