--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body style="background-color:#885">
+<body>
 <center> <h1>Curriculum vitae</h1> </center>
 <center> <h3>Fontan Timothée</h3> </center>
 <center> <img src="0T9A7508.jpg" height="136" width="200" alt="Image de moi"> </center>
