--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <center> <h1>Curriculum vitae</h1> </center>
 <center> <h3>Fontan Timothée</h3> </center>
 <center> <img src="0T9A7508.jpg" height="136" width="200" alt="Image de moi"> </center>
-<p style="color:#560000";> Programation </p> <progress value="60" max="100">70%</progress>
-<p style="color:#560000";>Graphisme </p> <progress value="10" max="100">70%</progress>
+<p class="bla"> Programation </pclass> <progress value="60" max="100">70%</progress>
+<p class="bla">Graphisme </p> <progress value="10" max="100">70%</progress>
 <p style="color:#560000";>Ortographe </p> <progress value="30" max="100">70%</progress>
 <p style="color:#005600";> Je suis un grand fan de l'histoire du <i> jeu vidéo </i> notament dans le <i>retro-gaming</i>, c'est grâce a ceci que je me suis intéressé a la programation dans ce mileu. </p>
 <p style="color:#005600";> je fais de la programetion depuis 4ans notament du c++ et j'ai déjâ fais un petit jeu que je garde en stand by. </p>
