--- a/index.html
+++ b/index.html
@@ -10,18 +10,25 @@
 <center> <h3>Fontan Timothée</h3> </center>
 <center> <img src="0T9A7508.jpg" height="136" width="200" alt="Image de moi"> </center>
 <p class="bla"> Programation </pclass> <progress value="60" max="100">70%</progress>
-<p class="bla">Graphisme </p> <progress value="10" max="100">70%</progress>
-<p style="color:#560000";>Ortographe </p> <progress value="30" max="100">70%</progress>
-<p style="color:#005600";> Je suis un grand fan de l'histoire du <i> jeu vidéo </i> notament dans le <i>retro-gaming</i>, c'est grâce a ceci que je me suis intéressé a la programation dans ce mileu. </p>
-<p style="color:#005600";> je fais de la programetion depuis 4ans notament du c++ et j'ai déjâ fais un petit jeu que je garde en stand by. </p>
-<p style="color:#005600";> Je ne peut plus faire de sport depuis le lycée par cause de manqque de temp et je ne joue plus vraiment a part a des jeux retro qui on <i>"marqué l'histoire"</i> du jeu vidéo et les jeux dit imanquable du moment. </p>
-<p style="color:#005600";> Je suis un grand fan de cinéma, mais je n'est pas de genre en particulé </p>
-<p style="color:#005600";> Désolée pour la page web très moche, je ne savais pas quoi faire. </p>
-<h2 style="color:#120056";> </h2>
+<pclass class="bla">Graphisme </pclass> <progress value="10" max="100">70%</progress>
+<pclass class="bla">Ortographe </pclass> <progress value="30" max="100">70%</progress>
+<p class="bla"> J'ai travaillé toutes mes vaccances a Ellip6 Pierrelate dan la programation, réparation (infomatique, mécanique) et aide a la rénovation du restorant. </p>
+<video width="320" height="240" controls autoplay>
+    <source src="e6%20vid.mp4" type="video/mp4">
+    <source src="e6%20vid.mp4" type="video/ogg">
+    Your browser does not support the video tag.
+    Votre navigateur ne suporte pas la video.
+</video>
+<img src="E6.jpg" height="168" width="265" alt="Photo des simulateur ellip6">
+<p class="bla"> je fais de la programetion depuis 4ans notament du c++ et j'ai déjâ fais un petit jeu que je garde en stand by. </p>
+<p class="bla"> Je suis un passioné de l'histoire du cinéma et du jeu vidéo </p>
+<p class="bla"> J'ai fait un BAC technologique STI2D option SIN(SYSTÈME D'INFORMATION ET NUMÉRIQUE) </p>
+<p class="bla">  </p>
+
 <table>
     <thead>
     <tr>
-        <th colspan="2">Mes jeux tant apprécié</th>
+        <th colspan="2"> <h2>Mes jeux tant apprécié</h2></th>
     </tr>
     </thead>
     <tbody>
@@ -53,10 +60,8 @@
 
     </tr>
     </tbody>
-
-    <a href="https://www.pornhub.com" target="_self">Le prochain site va vous surprendre</a>
 </table>
 
-
+<a href="https://www.pornhub.com" target="_self">Le prochain site va vous surprendre</a>
 </body>
 </html>
