--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     Votre navigateur ne suporte pas la video.
 </video>
 <img src="E6.jpg" height="168" width="265" alt="Photo des simulateur ellip6">
+<p class="bla">  Ce sont des simulateur automobile sur six axes, il simule le moindre mouvement et on fait des partie en local hoste avec les joueur des simulateurs voisins </p>
 <p class="bla"> je fais de la programetion depuis 4ans notament du c++ et j'ai déjâ fais un petit jeu que je garde en stand by. </p>
 <p class="bla"> Je suis un passioné de l'histoire du cinéma et du jeu vidéo </p>
 <p class="bla"> J'ai fait un BAC technologique STI2D option SIN(SYSTÈME D'INFORMATION ET NUMÉRIQUE) </p>
