ajout text simu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p class="bla"> Programation </pclass> <progress value="60" max="100">70%</progress>
 <pclass class="bla">Graphisme </pclass> <progress value="10" max="100">70%</progress>
 <pclass class="bla">Ortographe </pclass> <progress value="30" max="100">70%</progress>
-<p class="bla"> J'ai travaillé toutes mes vaccances a Ellip6 Pierrelate dan la programation, réparation (infomatique, mécanique) et aide a la rénovation du restorant. </p>
+<p class="new"> J'ai travaillé toutes mes vaccances a Ellip6 Pierrelate dan la programation, réparation (infomatique, mécanique) et aide a la rénovation du restorant. </p>
 <video width="320" height="240" controls autoplay>
     <source src="e6%20vid.mp4" type="video/mp4">
     <source src="e6%20vid.mp4" type="video/ogg">
@@ -20,11 +20,11 @@
     Votre navigateur ne suporte pas la video.
 </video>
 <img src="E6.jpg" height="168" width="265" alt="Photo des simulateur ellip6">
-<p class="bla">  Ce sont des simulateur automobile sur six axes, il simule le moindre mouvement et on fait des partie en local hoste avec les joueur des simulateurs voisins les colision sont aussi fonctionelle.</p>
-<p class="bla"> je fais de la programetion depuis 4ans notament du c++ et j'ai déjâ fais un petit jeu que je garde en stand by. </p>
-<p class="bla"> Je suis un passioné de l'histoire du cinéma et du jeu vidéo </p>
-<p class="bla"> J'ai fait un BAC technologique STI2D option SIN(SYSTÈME D'INFORMATION ET NUMÉRIQUE) </p>
-<p class="bla">  </p>
+<p class="new">  Ce sont des simulateur automobile sur six axes, il simule le moindre mouvement et on fait des partie en local hoste avec les joueur des simulateurs voisins les colision sont aussi fonctionelle.</p>
+<p class="new"> je fais de la programetion depuis 4ans notament du c++ et j'ai déjâ fais un petit jeu que je garde en stand by. </p>
+<p class="new"> Je suis un passioné de l'histoire du cinéma et du jeu vidéo </p>
+<p class="new"> J'ai fait un BAC technologique STI2D option SIN(SYSTÈME D'INFORMATION ET NUMÉRIQUE) </p>
+<p class="new">  </p>
 
 <table>
     <thead>
@@ -63,6 +63,6 @@
     </tbody>
 </table>
 
-<a href="https://www.pornhub.com" target="_self">Le prochain site va vous surprendre</a>
+<a href="https://kancabricot.github.io/cv/" target="_self">Le prochain site va vous surprendre!!</a>
 </body>
 </html>
