changement de lien hyper text

--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
     </tbody>
 </table>
 
-<a href="https://kancabricot.github.io/cv/" target="_self">Le prochain site va vous surprendre!!</a>
+<a href="https://genesisz0.github.io/cv/" target="_self">Le prochain site va vous surprendre!!</a>
 </body>
 </html>
