changement de lien hyper text

--- a/index.html
+++ b/index.html
@@ -2,25 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Timohée FONTAN</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <center> <h1>Curriculum vitae</h1> </center>
 <center> <h3>Fontan Timothée</h3> </center>
 <center> <img src="0T9A7508.jpg" height="136" width="200" alt="Image de moi"> </center>
-<p class="bla"> Programation </pclass> <progress value="60" max="100">70%</progress>
-<pclass class="bla">Graphisme </pclass> <progress value="10" max="100">70%</progress>
-<pclass class="bla">Ortographe </pclass> <progress value="30" max="100">70%</progress>
-<p class="new"> J'ai travaillé toutes mes vaccances a Ellip6 Pierrelate dan la programation, réparation (infomatique, mécanique) et aide a la rénovation du restorant. </p>
-<video width="320" height="240" controls autoplay>
+<center> <p class="bla"> Programation </pclass> <progress value="60" max="100">70%</progress>
+ <pclass class="bla">Graphisme </pclass> <progress value="10" max="100">70%</progress>
+<pclass class="bla">Ortographe </pclass> <progress value="30" max="100">70%</progress> </center>
+
+<center> <p class="titre"> Mon incroyable et intéresente vie !! </p>
+
+
+<center> <p class="new"> J'ai travaillé toutes mes vaccances a Ellip6 Pierrelate dan la programation, réparation (infomatique, mécanique) et aide a la rénovation du restorant. </p> <center>
+    <center> <video width="320" height="240" controls autoplay>
     <source src="e6%20vid.mp4" type="video/mp4">
     <source src="e6%20vid.mp4" type="video/ogg">
     Your browser does not support the video tag.
     Votre navigateur ne suporte pas la video.
 </video>
-<img src="E6.jpg" height="168" width="265" alt="Photo des simulateur ellip6">
-<p class="new">  Ce sont des simulateur automobile sur six axes, il simule le moindre mouvement et on fait des partie en local hoste avec les joueur des simulateurs voisins les colision sont aussi fonctionelle.</p>
+<img src="E6.jpg" height="168" width="265" alt="Photo des simulateur ellip6">  </center>
+    <center><p class="new">  Ce sont des simulateur automobile sur six axes, il simule le moindre mouvement et on fait des partie en local hoste avec les joueur des simulateurs voisins les colision sont aussi fonctionelle.</p> </center>
 <p class="new"> je fais de la programetion depuis 4ans notament du c++ et j'ai déjâ fais un petit jeu que je garde en stand by. </p>
 <p class="new"> Je suis un passioné de l'histoire du cinéma et du jeu vidéo </p>
 <p class="new"> J'ai fait un BAC technologique STI2D option SIN(SYSTÈME D'INFORMATION ET NUMÉRIQUE) </p>
@@ -29,7 +33,7 @@
 <table>
     <thead>
     <tr>
-        <th colspan="2"> <h2>Mes jeux tant apprécié</h2></th>
+         <th class="titre" colspan="2"> Mes jeux tant apprécié </th>
     </tr>
     </thead>
     <tbody>
@@ -63,6 +67,6 @@
     </tbody>
 </table>
 
-<a href="https://genesisz0.github.io/cv/" target="_self">Le prochain site va vous surprendre!!</a>
+<center> <h2><a href="https://genesisz0.github.io/cv/" target="_self">Le prochain site va vous surprendre !!</a> </h2> </center>
 </body>
 </html>
