changement de lien hyper text

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<center> <h1>Curriculum vitae</h1> </center>
-<center> <h3>Fontan Timothée</h3> </center>
+<center> <p class="np">Curriculum vitae</p> </center>
+<center> <p class="titre">Fontan Timothée</p> </center>
 <center> <img src="0T9A7508.jpg" height="136" width="200" alt="Image de moi"> </center>
 <center> <p class="bla"> Programation </pclass> <progress value="60" max="100">70%</progress>
  <pclass class="bla">Graphisme </pclass> <progress value="10" max="100">70%</progress>
