--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <center> <p class="titre"> Mon incroyable et intéresente vie !! </p>
 
 
-<center> <p class="new"> J'ai travaillé toutes mes vaccances a Ellip6 Pierrelate dan la programation, réparation (infomatique, mécanique) et aide a la rénovation du restorant. </p> <center>
+<center> <p class="new"> J'ai travaillé toutes mes vaccances a Ellip6 Pierrelate dans la programation, réparation (infomatique, mécanique) et aide a la rénovation du restorant. </p> <center>
     <center> <video width="320" height="240" controls autoplay>
     <source src="e6%20vid.mp4" type="video/mp4">
     <source src="e6%20vid.mp4" type="video/ogg">
@@ -24,8 +24,8 @@
     Votre navigateur ne suporte pas la video.
 </video>
 <img src="E6.jpg" height="168" width="265" alt="Photo des simulateur ellip6">  </center>
-    <center><p class="new">  Ce sont des simulateur automobile sur six axes, il simule le moindre mouvement et on fait des partie en local hoste avec les joueur des simulateurs voisins les colision sont aussi fonctionelle.</p> </center>
-<p class="new"> je fais de la programetion depuis 4ans notament du c++ et j'ai déjâ fais un petit jeu que je garde en stand by. </p>
+    <center><p class="new">  Ce sont des simulateurs automobiles sur six axes, ils simulent le moindre mouvement et on fait des parties en local-host avec les joueur des simulateurs voisins les colisions sont aussi fonctionelles.</p> </center>
+<p class="new"> je fais de la programmation depuis 4ans notament du c++ et j'ai déjâ fais un petit jeu que je garde en stand by. </p>
 <p class="new"> Je suis un passioné de l'histoire du cinéma et du jeu vidéo </p>
 <p class="new"> J'ai fait un BAC technologique STI2D option SIN(SYSTÈME D'INFORMATION ET NUMÉRIQUE) </p>
 <p class="new">  </p>
@@ -54,7 +54,7 @@
     </tr>
     <tr>
         <td>Super smash bros Ultimate</td>
-        <td>Jeu de combat et de platform</td>
+        <td>Jeu de combat et de platforme</td>
         <td> <img src="ssbu.jpg" height="168" width="300" alt="Image jeu super smash bros"></td>
     </tr>
     <tr>
