--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <center> <p class="titre"> Mon incroyable et intéresente vie !! </p>
 
 
-<center> <p class="new"> J'ai travaillé toutes mes vaccances a Ellip6 Pierrelate dans la programation, réparation (infomatique, mécanique) et aide a la rénovation du restorant. </p> <center>
+<center> <p class="new"> J'ai travaillé toutes mes vaccances a Ellip6 Pierrelate dans la programmation, réparation (infomatique, mécanique) et aide a la rénovation du restorant. </p> <center>
     <center> <video width="320" height="240" controls autoplay>
     <source src="e6%20vid.mp4" type="video/mp4">
     <source src="e6%20vid.mp4" type="video/ogg">
