--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
     </tbody>
 </table>
 
-<center> <h2><a href="https://solarinfiraoff.github.io/cv/" target="_self">Le prochain site va vous surprendre !!</a> </h2> </center>
+<center> <h2><a href="https://solarinfireoff.github.io/cv/" target="_self">Le prochain site va vous surprendre !!</a> </h2> </center>
 </body>
 </html>
